refs #438 - staging and production profiles with heroku